--- a/Agricola_Front/mainwindow_v1.ui
+++ b/Agricola_Front/mainwindow_v1.ui
@@ -231,7 +231,7 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_35">
             <item>
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="log_2">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                 <horstretch>0</horstretch>
