--- a/Agricola_Front/PersonalField/personal_resource.ui
+++ b/Agricola_Front/PersonalField/personal_resource.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>437</width>
-    <height>332</height>
+    <width>347</width>
+    <height>304</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -69,7 +69,7 @@
           <number>0</number>
          </property>
          <item row="3" column="2">
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1,1">
            <property name="spacing">
             <number>0</number>
            </property>
@@ -103,7 +103,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="pushButton_17">
+            <widget class="QLabel" name="turn_num">
              <property name="maximumSize">
               <size>
                <width>40</width>
@@ -137,7 +137,7 @@
           </widget>
          </item>
          <item row="0" column="2">
-          <widget class="QLabel" name="pushButton">
+          <widget class="QLabel" name="count_dirt">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -153,7 +153,7 @@
           </widget>
          </item>
          <item row="1" column="2">
-          <widget class="QLabel" name="pushButton_3">
+          <widget class="QLabel" name="count_reed">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -169,7 +169,7 @@
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QLabel" name="pushButton_16">
+          <widget class="QLabel" name="count_meal">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -249,7 +249,7 @@
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QLabel" name="pushButton_13">
+          <widget class="QLabel" name="wood_count">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -281,7 +281,7 @@
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QLabel" name="pushButton_14">
+          <widget class="QLabel" name="count_stone">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -297,7 +297,7 @@
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QLabel" name="pushButton_15">
+          <widget class="QLabel" name="count_grain">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -313,7 +313,7 @@
           </widget>
          </item>
          <item row="2" column="2">
-          <widget class="QLabel" name="pushButton_5">
+          <widget class="QLabel" name="count_vegetable">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -387,7 +387,7 @@
           <number>0</number>
          </property>
          <item row="1" column="2">
-          <widget class="QLabel" name="pushButton_22">
+          <widget class="QLabel" name="count_worker">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -403,7 +403,7 @@
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QLabel" name="pushButton_23">
+          <widget class="QLabel" name="count_beg_token">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -483,7 +483,7 @@
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QLabel" name="pushButton_30">
+          <widget class="QLabel" name="count_cow">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -499,7 +499,7 @@
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QLabel" name="pushButton_31">
+          <widget class="QLabel" name="count_fence">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -515,7 +515,7 @@
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QLabel" name="pushButton_28">
+          <widget class="QLabel" name="count_sheep">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -547,7 +547,7 @@
           </widget>
          </item>
          <item row="2" column="2">
-          <widget class="QLabel" name="pushButton_32">
+          <widget class="QLabel" name="count_barn">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -611,7 +611,7 @@
           </widget>
          </item>
          <item row="0" column="2">
-          <widget class="QLabel" name="pushButton_21">
+          <widget class="QLabel" name="count_pig">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
