--- a/Agricola_Front/Basic/worker_board.ui
+++ b/Agricola_Front/Basic/worker_board.ui
@@ -30,17 +30,14 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QWidget" name="widget" native="true">
+    <widget class="QWidget" name="widget_5" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="styleSheet">
-      <string notr="true">border-right-color: rgb(153, 102, 51);</string>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="2,1">
+     <layout class="QVBoxLayout" name="verticalLayout_5" stretch="2,1">
       <property name="spacing">
        <number>0</number>
       </property>
@@ -73,7 +70,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="label_5">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
           <horstretch>0</horstretch>
