--- a/Agricola_Front/MyQRC.qrc
+++ b/Agricola_Front/MyQRC.qrc
@@ -1,51 +1,39 @@
 <RCC>
   <qresource prefix="newPrefix">
-    <file>곡식 활용.png</file>
-    <file>급한 가족 늘리기.png</file>
-    <file>기본 가족 늘리기.png</file>
-    <file>농장 개조.png</file>
-    <file>동부채석장.png</file>
-    <file>돼지 시장.png</file>
-    <file>소시장.png</file>
-    <file>양.png</file>
-    <file>양시장.png</file>
-    <file>울타리.png</file>
-    <file>주요설비.png</file>
-    <file>집 개조 크기.png</file>
-    <file>채소 종자.png</file>
-    <file>barn_blue.png</file>
-    <file>barn_green.png</file>
-    <file>barn_purple.png</file>
-    <file>barn_red.png</file>
-    <file>empty_field.png</file>
-    <file>harvest.png</file>
-    <file>IMG_0402.PNG</file>
-    <file>IMG_0403.PNG</file>
-    <file>IMG_0404.PNG</file>
-    <file>KakaoTalk_Photo_2024-05-31-15-59-59_011-removebg-preview.png</file>
-    <file>KakaoTalk_Photo_2024-05-31-16-29-49-removebg-preview.png</file>
-    <file>meal.png</file>
-    <file>rock.png</file>
-    <file>round_circle.svg</file>
-    <file>wood.png</file>
-    <file>worker_blue.png</file>
-    <file>worker_green.png</file>
-    <file>worker_purple.png</file>
-    <file>worker_red.png</file>
-    <file>barn_blue.png</file>
-    <file>barn_green.png</file>
-    <file>barn_purple.png</file>
-    <file>barn_red.png</file>
-    <file>meal.png</file>
-    <file>rock.png</file>
-    <file>wood.png</file>
-    <file>worker_green.png</file>
-    <file>worker_purple.png</file>
-    <file>worker_red.png</file>
-    <file>worker_blue.png</file>
-    <file>harvest.png</file>
-    <file>IMG_0402.PNG</file>
-    <file>IMG_0403.PNG</file>
-    <file>IMG_0404.PNG</file>
+    <file>images/vegetable.png</file>
+    <file>images/곡식 활용.png</file>
+    <file>images/급한 가족 늘리기.png</file>
+    <file>images/기본 가족 늘리기.png</file>
+    <file>images/농장 개조.png</file>
+    <file>images/동부채석장.png</file>
+    <file>images/돼지 시장.png</file>
+    <file>images/소시장.png</file>
+    <file>images/양.png</file>
+    <file>images/양시장.png</file>
+    <file>images/울타리.png</file>
+    <file>images/주요설비.png</file>
+    <file>images/집 개조 크기.png</file>
+    <file>images/채소 종자.png</file>
+    <file>images/barn_blue.png</file>
+    <file>images/barn_green.png</file>
+    <file>images/barn_purple.png</file>
+    <file>images/barn_red.png</file>
+    <file>images/dirt.png</file>
+    <file>images/empty_field.png</file>
+    <file>images/food.png</file>
+    <file>images/harvest.png</file>
+    <file>images/IMG_0402.PNG</file>
+    <file>images/IMG_0403.PNG</file>
+    <file>images/IMG_0404.PNG</file>
+    <file>images/reed.png</file>
+    <file>images/grain.png</file>
+    <file>images/rock.png</file>
+    <file>images/round_circle.svg</file>
+    <file>images/turn_icon.png</file>
+    <file>images/wood.png</file>
+    <file>images/worker_blue.png</file>
+    <file>images/worker_green.png</file>
+    <file>images/worker_purple.png</file>
+    <file>images/worker_red.png</file>
   </qresource>
 </RCC>
