--- a/Agricola_Front/PersonalField/personal_resource.ui
+++ b/Agricola_Front/PersonalField/personal_resource.ui
@@ -44,7 +44,7 @@
       <number>1</number>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="page_0">
       <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -249,7 +249,7 @@
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QLabel" name="wood_count">
+          <widget class="QLabel" name="count_wood">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
