--- a/Agricola_Front/PersonalField/personal_resource.ui
+++ b/Agricola_Front/PersonalField/personal_resource.ui
@@ -172,7 +172,7 @@
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QLabel" name="count_food">
+          <widget class="QLabel" name="count_meal">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
