--- a/Agricola_Front/mainwindow_v1.ui
+++ b/Agricola_Front/mainwindow_v1.ui
@@ -83,9 +83,9 @@
         <item>
          <widget class="QStackedWidget" name="stackedWidget">
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
-          <widget class="QWidget" name="round">
+          <widget class="QWidget" name="round_page">
            <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,1">
             <property name="spacing">
              <number>0</number>
@@ -208,7 +208,7 @@
             </item>
            </layout>
           </widget>
-          <widget class="QWidget" name="personal">
+          <widget class="QWidget" name="personal_page">
            <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,1">
             <item>
              <layout class="QVBoxLayout" name="frm_main_field"/>
