1. 로그창 추가 2. 말칸 이동 3. 인포메이션 추가 4. 이미지 추가(QRC변경)

--- a/Agricola_Front/MyQRC.qrc
+++ b/Agricola_Front/MyQRC.qrc
@@ -1,5 +1,23 @@
 <RCC>
   <qresource prefix="newPrefix">
+    <file>images/number_1.png</file>
+    <file>images/number_2.png</file>
+    <file>images/number_3.png</file>
+    <file>images/number_4.png</file>
+    <file>images/number_5.png</file>
+    <file>images/number_6.png</file>
+    <file>images/barn_none.png</file>
+    <file>images/fence_blue.png</file>
+    <file>images/worker_none.png</file>
+    <file>images/fence_green.png</file>
+    <file>images/fence_none.png</file>
+    <file>images/fence_purple.png</file>
+    <file>images/fence_red.png</file>
+    <file>images/arable_land.png</file>
+    <file>images/begging_token.png</file>
+    <file>images/cow.png</file>
+    <file>images/pig.png</file>
+    <file>images/sheep.png</file>
     <file>check/check.png</file>
     <file>check/undo.png</file>
     <file>images/vegetable.png</file>
@@ -29,8 +47,8 @@
     <file>images/IMG_0404.PNG</file>
     <file>images/reed.png</file>
     <file>images/grain.png</file>
-    <file>images/rock.png</file>
     <file>images/round_circle.svg</file>
+    <file>images/stone.png</file>
     <file>images/turn_icon.png</file>
     <file>images/wood.png</file>
     <file>images/worker_blue.png</file>
