NOW&NEXT 표기, 점수표 추가, 쓸 데 없는 파일 삭제

--- a/Agricola_Front/MyQRC.qrc
+++ b/Agricola_Front/MyQRC.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="newPrefix">
+    <file>images/scoreboard.png</file>
     <file>images/fence_h_3.png</file>
     <file>images/fence_v_3.png</file>
     <file>images/fence_h_0.png</file>
